--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta name="description" content="Un lugar donde encontrarás las mejores bandas y artistas del momento">
     <meta name="keywords" content="MUSICA, ALBUMS, BANDAS, ARTISTAS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/cc89456e6d.js" crossorigin="anonymous"></script>
     <title>PentaMusic-inicio</title>
 </head>
-<body class="bg-dark container-fluid">
+<body class="bg-image">
     <header>
-        <div class="container-fluid">
+        <div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html"><img src="img/logo-penta-music.png" alt="imagen-del-logo" ></a>
@@ -47,133 +49,29 @@
         </div>
     </header>
 
-
-
-    <div>
-
-        <img class="imagen-fondo" src="img/img-concierto.png" alt="fondo-concierto">
+<main>
+    <div class="main">
+    <h1 class="title">Let the music play</h1>
+    <a class="start"  href="pages/home.html">
+        <button class="color-de-fondo btn btn-outline-success" type="submit">Start Listening</button>
+    </a>
     </div>
+</main>
 
 
-
-
-
-
-
-
-
-
-
-    <footer class="container-fluid text-light">
-        <div class="row p-5 bg-secondary">
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <img src="img/logo-penta-music.png" alt="imagen-del-logo">
-            </div>
-            <div class="col-xs-12 col-md-6 col-lg-3">
-            </div>
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <p class="h5">Seguinos en Redes</p>
-            </div>
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <img src="img/twiter.png" alt="logo-de-twiter">
-                <img src="img/instagram.png" alt="logo-de-insta">
-                <img src="img/whatsapp.png" alt="logo-de-whatsapp">
-                <img src="img/face.png" alt="logo-de-face">
-            </div>
+<footer class="pie-pagina">
+    <div class="grupo-1">
+        <div class="red-social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-instagram" ></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-youtube"></a>
         </div>
-    </footer>
-
-
-
-
-
-
-
-
-
-
-
-    <!--<section>
-        <div class="artistas">
-            <h1>Artist</h1>
-            <div class="artist">
-                <img  src="img/lali.jpg">
-                <img  src="img/shawn.jpg" >
-                <img  src="img/abel-pintos.jpg" >
-                <img  src="img/ariana.jpg" >
-                <img  src="img/ed-sheeran.jpg" >
-                <img  src="img/laura-marano.jpg" >
-            </div>
-            <div class="artist">
-                <img  src="img/miley.cyrus.jpg" >
-                <img  src="img/francesco-parrino.jpg">
-                <img  src="img/ross-linch.jpg" >
-                <img  src="img/justin.jpg" >
-                <img  src="img/axel.jpg">
-                <img  src="img/sabrina-carpenter.jpg">
-            </div>
-        </div>
-        <h1>Albums</h1>
-        <div id="albums" class="grid-albums">
-            <div class="one-direction">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6cunQQ7YZisYOoiFu2ywIq?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="twice">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5K50GHH7OqxKavKoYb7aJm?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="carpenter">
-                <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/album/55huyEjfSVsk9nnmmKp5df?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="r5">
-                <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/album/4lzeutaiLSyo7ROvG2Hcdj?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-        </div>
-
-        <h1>Podcast</h1>
-        <div id="podcast"class="grid-podcast">
-            <div class="itiel">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/7m7kDZMMyoym9HWj26uboL?utm_source=generator&theme=0" width="300" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="agape">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/2UcMU5vUWmMIjsRUhE4omM?utm_source=generator&theme=0" width="300" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="alex">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/2iU3y9MJhZOsdS7evqsmLp?utm_source=generator&theme=0" width="300" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-        </div>
-
-        <h1>Mix</h1>
-        <div id="mix"class="grid-mix">
-            <div class="daily-mix-1">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E39AJKUtp6ULn?utm_source=generator" width="300" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="daily-mix-2">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E36ORsEVal5fW?utm_source=generator" width="300" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="daily-mix-3">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2tWsGlCpi3L9nmQPjRwBKm?utm_source=generator" width="300" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-        </div>
-    </section>-->
-
-    <!--<footer class="container-fluid text-light">
-        <div class="row p-5 bg-secondary">
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <img src="img/logo-penta-music.png" alt="">
-            </div>
-            <div class="col-xs-12 col-md-6 col-lg-3">
-            </div>
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <p class="h5">Seguinos en Redes</p>
-            </div>
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <img src="img/twiter.png" alt="">
-                <img src="img/instagram.png" alt="">
-                <img src="img/whatsapp.png" alt="">
-                <img src="img/face.png" alt="">
-            </div>
-        </div>
-    </footer>-->
+    </div>
+    <div class="grupo-2">
+        <small>&copy; 2022 <b>PentaMusic</b> - Todos los derechos reservados</small>
+    </div>
+</footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
