--- a/pages/home.html
+++ b/pages/home.html
@@ -7,12 +7,13 @@
     <meta name="description" content="Un lugar donde encontrarás las mejores bandas y artistas del momento">
     <meta name="keywords" content="MUSICA, ALBUMS, BANDAS, ARTISTAS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/cc89456e6d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <title>PentaMusic-inicio</title>
 </head>
-<body class="bg-dark container-fluid">
+<body>
     <header>
-        <div class="container-fluid">
+        <div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/logo-penta-music.png" alt="imagen-del-logo" ></a>
@@ -67,7 +68,7 @@
         </section>
     </main>
     <section>
-            <h1>Artist</h1>
+            <h1>Artists</h1>
                 <div class="grid-artist"> 
                     <img class="artist" src="../img/lali.jpg" alt="img-de-lali-esposito">
                     <img class="artist" src="../img/shawn.jpg" alt="img-de-shawn-mendes" >
@@ -98,7 +99,7 @@
             </div>
         </div>
 
-        <h2 >Podcast</h2>
+        <h2 >Podcasts</h2>
         <div class="grid-podcast">
             <div class="ids">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/5XZmXTd8RPIdobfjMGrksu?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
@@ -143,25 +144,21 @@
         </div>
     </section>
 
-    <footer class="container-fluid text-light">
-        <div class="row p-5 bg-secondary">
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <img src="../img/logo-penta-music.png" alt="imagen-del-logo">
-            </div>
-            <div class="col-xs-12 col-md-6 col-lg-3">
-            </div>
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <p class="h5">Seguinos en Redes</p>
-            </div>
-            <div class="col-xs-12 col-md-6 col-lg-3">
-                <img src="../img/twiter.png" alt="logo-de-twiter">
-                <img src="../img/instagram.png" alt="logo-de-insta">
-                <img src="../img/whatsapp.png" alt="logo-de-whatsapp">
-                <img src="../img/face.png" alt="logo-de-face">
+    <a class="up" href="#"><i class="fa-solid fa-angle-up"></i></a>
+
+    <footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="red-social">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-instagram" ></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-youtube"></a>
             </div>
         </div>
+        <div class="grupo-2">
+            <small>&copy; 2022 <b>PentaMusic</b> - Todos los derechos reservados</small>
+        </div>
     </footer>
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
@@ -169,3 +166,7 @@
     </script>
 </body>
 </html>
+
+
+
+
