--- a/pages/shop.html
+++ b/pages/shop.html
@@ -7,14 +7,15 @@
     <meta name="description" content="Tienda de música. Instrumentos de primera calidad">
     <meta name="keywords" content="MUSICA, ALBUMS, BANDAS, ARTISTAS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/cc89456e6d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <title>Shop-Online</title>
 </head>
 
-<body class="bg-dark">
+<body>
 
         <header>
-            <div class="container">
+            <div >
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="../index.html"><img src="../img/logo-penta-music.png"alt="imagen-del-logo" ></a>
@@ -91,26 +92,20 @@
 
 
 
-        <footer class="container-fluid text-light">
-            <div class="row p-5 bg-secondary">
-                <div class="col-xs-12 col-md-6 col-lg-3">
-                    <img src="../img/logo-penta-music.png" alt="imagen-del-logo">
-                </div>
-                <div class="col-xs-12 col-md-6 col-lg-3">
-                </div>
-                <div class="col-xs-12 col-md-6 col-lg-3">
-                    <p class="h5">Seguinos en Redes</p>
-                </div>
-                <div class="col-xs-12 col-md-6 col-lg-3">
-                    <img src="../img/twiter.png" alt="logo-de-twiter">
-                    <img src="../img/instagram.png" alt="logo-de-insta">
-                    <img src="../img/whatsapp.png" alt="logo-de-whatsapp">
-                    <img src="../img/face.png" alt="logo-de-face">
+
+        <footer class="pie-pagina">
+            <div class="grupo-1">
+                <div class="red-social">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-instagram" ></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-youtube"></a>
                 </div>
             </div>
+            <div class="grupo-2">
+                <small>&copy; 2022 <b>PentaMusic</b> - Todos los derechos reservados</small>
+            </div>
         </footer>
-
-
 
 
 
